# analytics-platform

./: Dockerfile  docker-compose.yml  features.txt  ideas.txt  settings.xml
__OTHER_FRAMEWORKS__/grafana/Grafana-Alloy-for-Beginners-main/: README.md
__OTHER_FRAMEWORKS__/grafana/GrafanaCon2025-ScienceFair-IoT-main/: README.md
__OTHER_FRAMEWORKS__/grafana/Grafana_Status_panel-main/: .gitignore  NOTICES  README.md  cspell.config.json  docker-compose.yaml  lefthook.yml  package-lock.json  package.json  playwright.config.ts
__OTHER_FRAMEWORKS__/grafana/M5StampFly-GrafanaCon2025-main/: LICENSE  (+1 more)
__OTHER_FRAMEWORKS__/grafana/alloy-scenarios-main/app-instrumentation/logging/popular-logging-frameworks/cpp/: CMakeLists.txt  Dockerfile  main.cpp
__OTHER_FRAMEWORKS__/grafana/azure_eventhub_to_loki-main/: .gitignore  DEVELOPER.md  INSTALLATION.md  Makefile  README.md  azdeploy.json  buf.gen.yaml  buf.yaml  function_app.py  host.json  push.proto  pyproject.toml
__OTHER_FRAMEWORKS__/grafana/azure_eventhub_to_loki-main/.github/workflows/: ci.yml
__OTHER_FRAMEWORKS__/grafana/azure_eventhub_to_loki-main/logexport/: config.py  deserialize.py  filter.py
__OTHER_FRAMEWORKS__/grafana/azure_eventhub_to_loki-main/logexport/loki/: __init__.py  client.py
__OTHER_FRAMEWORKS__/grafana/azure_eventhub_to_loki-main/logexport/push/: push_pb2.py  push_pb2.pyi
__OTHER_FRAMEWORKS__/grafana/azure_eventhub_to_loki-main/tests/: audit_log.json  issue_15.json  issue_19_sample_1.json  issue_19_sample_2.json  loki_test_server.py  record_sample.json  sample_messages.json  test_config.py  test_deserialization.py  test_filter.py  test_loki_client.py
__OTHER_FRAMEWORKS__/grafana/campfire-mcp-demo-main/: .gitignore  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
__OTHER_FRAMEWORKS__/grafana/campfire-mcp-demo-main/.github/workflows/: ci.yaml
__OTHER_FRAMEWORKS__/grafana/campfire-mcp-demo-main/config/: prometheus.yml  promtail-config.yml  tempo.yaml
__OTHER_FRAMEWORKS__/grafana/campfire-mcp-demo-main/config/grafana/provisioning/datasources/: datasources.yml
__OTHER_FRAMEWORKS__/grafana/campfire-mcp-demo-main/scripts/: generate_load.py
__OTHER_FRAMEWORKS__/grafana/campfire-mcp-demo-main/tests/: test_app_integration.py  test_generate_load.py
__OTHER_FRAMEWORKS__/grafana/hackathon-13-ministrace-main/: Cargo.toml  README.md  THIRDPARTY.yaml  deny.toml  justfile  rust-toolchain.toml
__OTHER_FRAMEWORKS__/grafana/hackathon-13-ministrace-main/.github/: CODEOWNERS  dependabot.yml
__OTHER_FRAMEWORKS__/grafana/hackathon-13-ministrace-main/.github/workflows/: actionlint.yml  build.yml  licenses.yml  test.yml
__OTHER_FRAMEWORKS__/grafana/hackathon-13-ministrace-main/src/: main.rs
__OTHER_FRAMEWORKS__/grafana/httpbin-main/: Dockerfile  README.md  app.json  docker-compose.yml  pyproject.toml  setup.py
__OTHER_FRAMEWORKS__/grafana/httpbin-main/.github/workflows/: push.yaml
__OTHER_FRAMEWORKS__/grafana/httpbin-main/httpbin/: core.py
__OTHER_FRAMEWORKS__/grafana/httpbin-main/httpbin/templates/: index.html
__OTHER_FRAMEWORKS__/grafana/httpbin-main/httpbin/templates/flasgger/: index.html
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/: .gitignore  LICENSE  README.md  lapo.py  pyproject.toml  uvrun.sh
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/.cursor/rules/: python-code.mdc  python-tests.mdc
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/github-actions/create-docs-update-pr/: action.yml
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/github-actions/generate-embeddings/: action.yml
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/old_agents/: patch_validator_agent.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/: lapo.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/agents/: docs_search_agent.py  generate_patch_agent.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/functions/: create_pr_from_patch.py  git_pr.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/local_tests/: generate_git_patch_from_blocks_test.py  generate_patch_agent_local_test.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/rag/: generate_embeddings.py  rag.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/tools/: __init__.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/src/tools/search_replace/: __init__.py  search_replace_apply.py  search_replace_validator.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/tests/tools/: __init__.py
__OTHER_FRAMEWORKS__/grafana/lapo-docs-main/tests/tools/search_replace/: __init__.py  test_search_replace_apply.py  test_search_replace_validator.py
__OTHER_FRAMEWORKS__/grafana/sigma-rule-deployment-main/actions/convert/: README.md  action.yml  convert.py  main.py  pyproject.toml  settings.py  test.yml  test_convert.py  test_correlation.yml
__OTHER_FRAMEWORKS__/open-telemetry/.project-main/migrate-otel-projects/: .env.example  .gitignore  README.md  migrate.py  pyproject.toml
__OTHER_FRAMEWORKS__/open-telemetry/.project-main/migrate-otel-projects/src/: __main__.py  field_extractor.py  git_history.py  github_client.py  llm_extractor.py  markdown_parser.py  models.py
__OTHER_FRAMEWORKS__/open-telemetry/.project-main/migrate-otel-projects/tests/: test_field_extractor.py  test_markdown_parser.py  test_models.py
__OTHER_FRAMEWORKS__/open-telemetry/opentelemetry-weaver-examples-main/basic/: Cargo.toml  README.md
__OTHER_FRAMEWORKS__/open-telemetry/opentelemetry-weaver-examples-main/basic/docs/attributes/: README.md  example.md  otel-sdk.md
__OTHER_FRAMEWORKS__/open-telemetry/opentelemetry-weaver-examples-main/basic/model/: attributes.yaml  registry_manifest.yaml
__OTHER_FRAMEWORKS__/open-telemetry/opentelemetry-weaver-examples-main/basic/src/: attributes.rs  main.rs  metrics.rs
__OTHER_FRAMEWORKS__/open-telemetry/opentelemetry-weaver-examples-main/basic/templates/registry/rust/: attributes.rs.j2  metrics.rs.j2  weaver.yaml
__OTHER_FRAMEWORKS__/open-telemetry/opentelemetry-weaver-examples-main/basic/tests/: live-check.rs
backend-app/: pom.xml
core/: pom.xml
data/: pom.xml
metrics/: pom.xml
(+7822 files in other folders)
