[package]
name = "ministrace"
version = "0.1.3"
edition = "2024"
authors = ["Mariell Hoversholm <mariell@grafana.com>"]
description = "A small, fast, and opinionated strace alternative, outputting in logfmt or JSON."
license = "GPL-3.0-only"
rust-version = "1.88"
publish = false

[dependencies]
clap = { version = "4.5.41", features = ["cargo", "derive", "env"] }
humantime = "2.2.0"
nix = { version = "0.30", features = ["process", "ptrace", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-quote = { version = "0.7.2", default-features = false, features = [
  "bash",
] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-logfmt = "0.3.5"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
