[package]
name = "weaver-example"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tokio = { version = "1.0", features = ["full"] }
hostname = "0.4.1"
anyhow = "1.0.98"
